# awesome-codex-plugins

./: README.md  plugins.json
.agents/plugins/: marketplace.json
.github/workflows/: scanner-example-lint.yml
plugins/Colin4k1024/tsp/: README.md
plugins/Colin4k1024/tsp/.codex-plugin/: plugin.json
plugins/GanyuanRan/Aegis/: README.md  package.json
plugins/GanyuanRan/Aegis/.codex-plugin/: plugin.json
plugins/GarethManning/education-agent-skills/: README.md
plugins/GarethManning/education-agent-skills/.codex-plugin/: plugin.json
plugins/Jason-chen-coder/dev-skills/: README.md
plugins/Kanevry/session-orchestrator/hooks/: hooks-codex.json
plugins/Le-Xuan-Thang/workflow-kit/: LICENSE  README.md  package.json  pyproject.toml
plugins/Le-Xuan-Thang/workflow-kit/.codex-plugin/: plugin.json
plugins/RBraga01/a-team/: README.md
plugins/RBraga01/a-team/.codex-plugin/: plugin.json
plugins/ValkyrLabs/GrayMatter/: README.md
plugins/ValkyrLabs/GrayMatter/.codex-plugin/: plugin.json
plugins/aient-ai/aient-codex-plugin/: README.md
plugins/aient-ai/aient-codex-plugin/.codex-plugin/: plugin.json
plugins/archcore-ai/plugin/.codex-plugin/: plugin.json
plugins/avansaber/tailtest-codex/.codex-plugin/: plugin.json
plugins/avivsinai/bitbucket-cli/.codex-plugin/: plugin.json
plugins/avivsinai/langfuse-mcp/: README.md
plugins/blackwell-systems/gcf-codex-plugin/.codex-plugin/: plugin.json
plugins/blackwell-systems/gcf-codex-plugin/hooks/: hooks.json
plugins/boshu2/agentops/: README.md
plugins/boshu2/agentops/skills-codex/: .agentops-manifest.json
plugins/douglasmonsky/codex-usage-tracker/: README.md  SECURITY.md  pyproject.toml
plugins/douglasmonsky/codex-usage-tracker/.codex-plugin/: plugin.json
plugins/douglasmonsky/codex-usage-tracker/skills/codex-usage-api/: SKILL.md
plugins/douglasmonsky/codex-usage-tracker/skills/codex-usage-tracker/: SKILL.md
plugins/douglasmonsky/codex-usage-tracker/skills/codex-usage-tracker/scripts/: run_mcp.py
plugins/epicsagas/alcove/: LICENSE  README.md  SECURITY.md
plugins/epicsagas/alcove/.codex-plugin/: hooks.json  plugin.json
plugins/epicsagas/alcove/registry/: mcp.json
plugins/epicsagas/epic-harness/: README.md  SECURITY.md  package.json  pnpm-lock.yaml
plugins/epicsagas/epic-harness/.codex-plugin/: hooks.json  plugin.json
plugins/epicsagas/epic-harness/registry/: mcp.json
plugins/f0d010c/stark/: README.md
plugins/f0d010c/stark/.codex-plugin/: plugin.json
plugins/hanhuark/mechanical-engineering-research-skill/: README.md
plugins/hanhuark/mechanical-engineering-research-skill/.claude-plugin/: plugin.json
plugins/hanhuark/mechanical-engineering-research-skill/commands/: me-build-slides.md  me-code-review.md  me-lit-review.md  (+2 more)
plugins/ndycode/codex-multi-auth/: README.md  package-lock.json  package.json
plugins/ndycode/oc-chatgpt-multi-auth/: package-lock.json  package.json
plugins/nyldn/claude-octopus/: README.md  package.json
plugins/ouonet/praxis/: package.json
plugins/sirmarkz/staff-engineer-mode/: README.md  package.json
plugins/study8677/antigravity-workspace-template/: README.md
plugins/useorgx/orgx-codex-plugin/: .mcp.json  README.md  package.json
plugins/yimwoo/hotl-plugin/: README.md
(+612 files in other folders)
